-Changed how the answer index buttons are selected during a test and their color changes when tests are graded. -cleanup methods and other changes to deal with memory issues. -Fixed MultipleCheckBoxTestPanel answers being incorrectly graded. -The text color on the question buttons during testing for partially correct questions now yellow instead of red. -Max points for MultipleCheckBox changed to the total checkbox questions. -Added showAndWait method to StackPanelAlert so that actions could be delayed until close is pressed. -addUser checks if user already exists and if email is empty. -Fixed StackPaneAlert from not showing up in addUser -Added class to css files for answers that are partially correct -UserManager changed from being accessed as a singleton to -Re-enabled email verifications being sent. -Fixed emails not be verified properly due to case. -Flagged question border colors changed -FillTheBlank answers are highlighted when the editor is first loaded. -MatchingWordTestPanel ListViews wrap the text. -Backups are saved of the test data -Autogenerated names for questions changed. -Fixed FillTheBlankEditor not matching dashes when checking for words